update spec